--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,10 +24,14 @@
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
           {% endif %}
           <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
+
+          <li><a href="/about/">About sim4IR</a></li>
+          <li><a href="/cfp/">Call for Papers</a></li>
+          <li><a href="/dates/">Important Dates</a></li>
         </ul>
 
         {% if site.github.is_project_page %}
-          <p class="header">HELLO!!This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+          <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
