--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <img src="/assets/img/sample.svg" style="width: 72px; height: 72px;" alt="Test" />
         <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
