--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,24 +16,15 @@
     <div class="wrapper">
       <header>
         <img src="/assets/img/logo.svg" style="width: 172px; height: auto;" alt="Test" />
-        <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
-        <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
+        <h1 class="header"><a href="/">The Sim4IR Workshop</a></h1>
+        <p class="header">At <strong>SIGIR 2021</strong></p>
 
         <ul>
           <li><a href="/about/">About sim4IR</a></li>
           <li><a href="/cfp/">Call for Papers</a></li>
           <li><a href="/dates/">Important Dates</a></li>
+          <li><a href="/submission/">Submission Guidelines</a></li>
         </ul>
-
-        {% if site.github.is_project_page %}
-          <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-          <ul>
-            <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
-          </ul>
-        {% endif %}
       </header>
 
       <section>
@@ -41,7 +32,8 @@
       </section>
 
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <a href="https://sigir.org/sigir2021/" target="_blank"><img class="sigir" src="/assets/img/sigir.png" alt="SIGIR 2021" /></a>
+        <p>Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
