--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -170,3 +170,68 @@ td:first-child img {
     width: 155px;
     height: auto;
 }
+
+/* Responsive Styling */
+
+@media screen and (max-width: 960px) {
+
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+    header {
+        width: 100%;
+        border-radius: 0;
+        margin-top: 0;
+        padding-right: 50px;
+    }
+
+    header img {
+        display: block;
+    }
+
+    header h1 {
+        display: inline-block;
+    }
+
+    header p.header {
+        display: inline;
+        padding-left: 10px;
+    }
+
+    footer {
+        display: none;
+    }
+
+    header ul {
+        display: inline-block;
+        position: static;
+        margin: 0;
+        width: auto;
+    }
+
+    header ul li {
+        display: inline-block;
+        width: auto;
+        margin-right: 10px;
+    }
+
+    header ul li:last-child {
+        margin-right: 0;
+    }
+
+    header ul li a {
+        padding: 5px;
+        background-color: #147f0a;
+        border-radius: 5px;
+    }
+}
+
+@media screen and (max-width: 730px) {
+
+    header {
+        padding-left: 20px;
+    }
+
+}
