--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,6 +21,9 @@
 
         <ul>
           <li><a href="/about/">About sim4IR</a></li>
+          <li><a href="/schedule/">Schedule</a></li>
+          <li><a href="/speakers/">Speakers</a></li>
+          <li></li>
           <li><a href="/cfp/">Call for Papers</a></li>
           <li><a href="/dates/">Important Dates</a></li>
           <li><a href="/submission/">Submission Guidelines</a></li>
