--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -176,6 +176,10 @@ table th {
     font-weight: 700 !important;
 }
 
+table tr {
+    background-color: gray;
+}
+
 /* Responsive Styling */
 
 @media screen and (max-width: 960px) {
