--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -174,6 +174,7 @@ td:first-child img {
 table th {
     font-family: 'Roboto', sans-serif !important;
     font-weight: 700 !important;
+    background-color: #0c4c06;
 }
 
 table tr {
@@ -181,7 +182,7 @@ table tr {
 }
 
 table tr:nth-child(2n) {
-    background-color: red;
+    background-color: #d4ffd0;
 }
 
 /* Responsive Styling */
