--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -182,7 +182,8 @@ table tr:nth-child(2n) {
 }
 
 table tr:hover {
-    background-color: #94ff8a !important;
+    background-color: #147f0a !important;
+    color: #fff !important;
 }
 
 /* Responsive Styling */
