--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -51,5 +51,6 @@
         ga('send', 'pageview');
       </script>
     {% endif %}
+    <script src="/assets/js/schedule.js"></script>
   </body>
 </html>
