--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -51,6 +51,9 @@
         ga('send', 'pageview');
       </script>
     {% endif %}
+    <script>
+      let pageTitle = '{{ page.title }}';
+    </script>
     <script src="/assets/js/schedule.js"></script>
   </body>
 </html>
