--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -186,6 +186,10 @@ table tr:hover {
     color: #fff !important;
 }
 
+.highlighted {
+    color: #106608 !important;
+}
+
 /* Responsive Styling */
 
 @media screen and (max-width: 960px) {
