--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,7 +20,7 @@
         <p class="header">At <strong>SIGIR 2021</strong></p>
 
         <ul>
-          <li><a href="/about/">About sim4IR</a></li>
+          <li><a href="/about/">About Sim4IR</a></li>
           <li><a href="/schedule/">Schedule</a></li>
           <li><a href="/speakers/">Speakers</a></li>
         </ul>
